# krawler-cli

./: .gitignore  README.md  crawl.yaml  example.yaml  main.py  pyproject.toml
src/crawler_downloader_cli/: __init__.py  abstract.py  browser.py  cli.py  config.py  download.py  fetch.py  parser.py  utils.py
